# SunCAD

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Pch.h  Pch.hxx  ResourceUtils.h  SunCAD.cc
src/App/: AboutDialog.cc  AboutDialog.h  AppContext.cc  AppContext.h  Application.cc  Application.h  CommandLine.cc  CommandLine.h  GuiApplication.cc  GuiApplication.h  MainWindow.cc  MainWindow.h  ViewportView.cc  ViewportView.h  ViewportViewModel.cc  ViewportViewModel.h  WelcomeDialog.cc  WelcomeDialog.h
src/App/Commands/: AppCommands.cc  AppCommands.h
src/Comm/: BaseObject.cc  BaseObject.h  List.cc  List.h  Macro.h  ObservableCollection.cc  ObservableCollection.h  OccHandle.h  PixMapHelper.cc  PixMapHelper.h  PropertyChangedEventArgs.cc  PropertyChangedEventArgs.h  QtMouseHelper.cc  QtMouseHelper.h
src/Comm/Serialization/: ISerializer.cc  ISerializer.h  QObjectSerializer.h  Reader.cc  Reader.h  SerializationContext.cc  SerializationContext.h  Serializer.cc  Serializer.h  Writer.cc  Writer.h
src/Comm/Types/: Color.cc  Color.h
src/Comm/Utils/: Algorithm.h
src/Core/: ColorExtensions.h  Core.h  CoreContext.cc  CoreContext.h  EntityContainer.cc  EntityContainer.h  Viewport.cc  Viewport.h  Workspace.cc  Workspace.h
src/Core/Auxiliary/: DatumPlane.cc  DatumPlane.h
src/Core/Components/: Component.cc  Component.h  IDecorable.cc  IDecorable.h  VisualStyle.cc  VisualStyle.h
src/Core/Extensions/: ColorExtensions.h
src/Core/Shapes/: Shape.cc  (+3 more)
src/Iact/: InteractionModule.cc  InteractionModule.h
src/Pres/: GlobalEventHandler.cc  GlobalEventHandler.h
(+204 files in other folders)
